<resources>
    <string name="app_name">Wifi Master</string>
    <string name="title_activity_speedtest" translatable="false">Speedtest</string>
            <string name="app_id" translatable="false">ca-app-pub-7796659861450905~6965662202</string>
            <string name="Banner" translatable="false">ca-app-pub-7796659861450905/7480667527</string>
            <string name="Interstitial" translatable="false">ca-app-pub-7796659861450905/2228340847</string>
    <string name="wifi_master_has_all_the_nearby_wifi_connection_so_you_can_connect_to_them_at_any_time_you_want" translatable="false">Wifi master has all the nearby wifi connection so you can connect to them at any time you want.</string>
    <string name="there_is_a_password_generator_that_suggests_some_passwords_for_you_to_secure_your_wifi_connection_you_can_generate_then_and_use_them_to_get_a_security_password_on_your_wifi_connection_so_no_one_can_use_it_without_your_permission" translatable="false">There is a password generator that suggests some passwords for you to secure your wifi connection. You can generate then and use them to get a security password on your wifi connection so no one can use it without your permission.</string>
    <string name="you_can_turn_your_wifi_on_and_off_with_auto_wifi_connection_feature" translatable="false">You can turn your wifi on and off with auto wifi connection feature.</string>
    <string name="you_can_save_your_known_wifi_connection_password_with_this_application_by_entering_the_password_to_connect_that_will_be_stored_in_the_database_so_when_ever_you_want_to_check_the_passqord_you_can_do_so" translatable="false">You can save your known wifi connection password with this application by entering the password to connect. That will be stored in the database so when ever you want to check the passqord you can do so.</string>
    <string name="you_can_use_internet_speed_tester_to_test_the_downloading_amd_uploading_speed_of_your_wifi_connection" translatable="false">You can use internet speed tester to test the downloading amd uploading speed of your wifi connection.</string>
    <string name="information_about_your_wifi_signals_and_other_things_like_ip_of_wifi_cpnnection_is_given_in_it" translatable="false">Information about your wifi signals and other things like ip of wifi cpnnection is given in it</string>
    <string name="it_not_a_wifi_password_cracker_hacker_and_it_is_not_intended_to_crack_or_hack_wifi_passwords" translatable="false">It not a WiFi password cracker/hacker and it is not intended to crack or hack WiFi passwords\\</string>
    <string name="this_application_let_s_you_to_see_password_of_your_known_wifi_networks" translatable="false">This application let’s you to see password of your KNOWN WIFI networks.</string>
    <string name="permissionMessage" translatable="false"><![CDATA[
<p>Please Allow Following permissions</p>
<ul><li><b>Access Phone Storage</b></li>
  <li><b>Access Device Location</b></li></ul>]]></string>
    <string name="privacy_policy_linkText" translatable="false"><![CDATA[
<a href="">https://wifimasterprivacypolicy.blogspot.com</a>
]]></string>
    <string name="privacy_policy_URL" translatable="false">https://wifimasterprivacypolicy.blogspot.com/</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">عربى</string>
    <string name="chinies" translatable="false">中文</string>
    <string name="france" translatable="false">Française</string>
    <string name="german" translatable="false">Keim</string>
    <string name="indonesian" translatable="false">bahasa Indonesia</string>
    <string name="italian" translatable="false">Italiana</string>
    <string name="polish" translatable="false">Polskie</string>
    <string name="portuguese" translatable="false">portuguesa</string>
    <string name="russian" translatable="false">русский</string>
    <string name="spanish" translatable="false">española</string>
    <string name="turkish" translatable="false">Türkçe</string>
    <string name="trun_on_auto_wifi_service">If You turn On Auto wifi the service will Run On background that will turn on Your Wifi After Every 30 Minutes if Wifi Is Off</string>
    <string name="privacyPolicyDescription">This Application collects the following categories of information from your use of this Application,</string>
    <string name="privacyPolicyLinkMessage">For Further details about how this app handles your information, please visit the privacy policy at below link.</string>
    <string name="intro_third_message">Block Wifi or/and Internet of any specific app or can all of app\'s.</string>
    <string name="intro_one_message">This app saves wifi password when you connecting your device with wifi.</string>
    <string name="intro_second_message">All nearby wifi list will be shown after scanning the wifi, you can connect with any one.</string>
    <string name="name">Terms and Conditions</string>
    <string name="no_wifi">Wifi not connected</string>
    <string name="permission_denied_location">Location</string>
    <string name="setting">Setting</string>
    <string name="show_npassword">Show  password</string>
    <string name="wifi_speed">Wifi Speed</string>
    <string name="generate_n_password">Generate  password</string>
    <string name="hotspot">Hotspot</string>
    <string name="wifi_n_information">Wifi  Information</string>
    <string name="share">Share</string>
    <string name="choose_your_language">Choose Your Language</string>
    <string name="start">Start</string>
    <string name="change_language">Change Language</string>
    <string name="permissions">Permissions</string>
    <string name="wifi_permission">Wifi Permission</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="turn_on_auto_wifi">Turn On Auto Wifi</string>
    <string name="how_was_your_experience_with_us">How Was Your Experience With Us ?</string>
    <string name="press_the_button_to_show_generated_key">Press the button to show generated key</string>
    <string name="generate_key">Generate Key</string>
    <string name="downloading">Downloading</string>
    <string name="uploading">Uploading</string>
    <string name="please_wait_for_a_while">Please Wait For A while</string>
    <string name="wifi_available">Wi-Fi Available</string>
    <string name="show_password">show password</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="enter_password">Enter password</string>
    <string name="please_share_your_experience">Please Share Your experience</string>
    <string name="exit">Exit</string>
    <string name="turnoffs">Turn Off</string>
    <string name="turn_onss">Turn On</string>
    <string name="SSID">SSID</string>
    <string name="ipAddress">IP Address</string>
    <string name="mac_address">Mac Address</string>
    <string name="bssid">BSSID</string>
    <string name="link_speed">Link Speed</string>
    <string name="network_id">Network Speed</string>
    <string name="rssid">RSSID</string>
    <string name="chanel_level">Channel Frequency Level</string>
    <string name="chanle_number">Channel Number</string>
    <string name="address">Address</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="country">Country:</string>
    <string name="postalCode">Postal Code:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="menu_search">Search application</string>
    <string name="menu_network">Internet settings</string>
    <string name="menu_whitelist_wifi">Block Wifi For All</string>
    <string name="menu_whitelist_other">Block Mobile Data</string>
    <string name="menu_reset_wifi">Reset Wi-Fi</string>
    <string name="menu_reset_other">Reset Mobile data</string>
    <string name="menu_vpn_settings">Manage VPN</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About</string>
    <string name="not_active">Device was not active for</string>
    <string name="in_use">In Use</string>
    <string name="brand">Brand</string>
    <string name="protocol">Protocol</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="decline">Decline</string>
    <string name="Accept">Accept</string>
    <string name="please_enter_password">Please Entre Password</string>
    <string name="eg_wifi_password">e.g password</string>
    <string name="privacy_policy_heading">Privacy Policy</string>
    <string name="privacpolicy_reviewText">Please review the User Data Retention Policy.</string>
    <string name="speedTest">SPEED TEST</string>
    <string name="deatail">DETAIL</string>
    <string name="connectivity">Connectivity</string>
    <string name="application">Application</string>
    <string name="data_usage">Data Usage</string>
    <string name="net_blocker">Net Blocker</string>
    <string name="language">LANGUAGE</string>
    <string name="SETTING">SETTING</string>
    <string name="show_wifi_password">Show Wifi Password</string>
    <string name="scan_wifi">Scan Wifi</string>
    <string name="block_internet">Block Internet</string>
    <string name="pp_heading">PRIVACY POLICY</string>
    <string name="phone_storage">Phone Storage</string>
    <string name="access_location">Access Location</string>
    <string name="access_wifi_or_internet">Access Wifi or Internet</string>
    <string name="bluetooth_and_bluetooth_admin">Bluetooth and bluetooth_admin</string>
    <string name="allow_permissions">Allow Permissions</string>
    <string name="allow">Allow</string>
    <string name="WIFI">WIFI</string>
    <string name="password_master">Password Master</string>
    <string name="SCANNER">SCANNER</string>
    <string name="scan">Scan</string>
    <string name="auto_wifi">Auto Wifi</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn Off</string>
    <string name="PASS_GENERATE">PASSWORD GENERATE</string>
    <string name="upper_case">Upper Case</string>
    <string name="lower_case">Lower Case</string>
    <string name="symbols">Symbols</string>
    <string name="numbers">Numbers</string>
    <string name="length">Password Length</string>
    <string name="generate">Generate</string>
    <string name="password_will_be_show_here">Password will be show here</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="discoverable">DiscoverAble</string>
    <string name="all_nearby_devices">All Nearby Devices</string>
    <string name="libve_location">Live Location</string>
    <string name="search_location">Search Location</string>
    <string name="signal_stregnth">Signal Strength</string>
    <string name="search">Search</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="scac_wifi">Scan Wifi</string>
    <string name="gen_pass">Generate Password</string>
    <string name="show_pass">Show Password</string>
    <string name="hotspto">Hotspot</string>
    <string name="wifi_info">Wifi information</string>
    <string name="bluetooth_con">Bluetoot h connect</string>
    <string name="wifi_strength">Wifi Signal Strength</string>
    <string name="app_usage">App Data Usage</string>
    <string name="net_block">Net Block</string>
    <string name="defaul_router_pass">Default Router Password</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
</resources>