<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="activities.ActivityLanguage">


    <include
        android:id="@+id/header_acLanugage"
        layout="@layout/layout_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_acLanugage"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:orientation="vertical">

            <Button
                android:id="@+id/acLanguage_btnEnglish"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:background="@drawable/background_ic_card"
                android:text="@string/english"
                android:textColor="@color/colorLanguageTxt"
                android:textSize="18sp"

                />

            <Button
                android:id="@+id/acLanguage_btnArabic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:background="@drawable/background_ic_card"
                android:text="@string/arabic"
                android:textColor="@color/colorLanguageTxt"
                android:textSize="18sp" />

            <Button
                android:id="@+id/acLanguage_btnChina"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:background="@drawable/background_ic_card"
                android:text="@string/chinies"
                android:textColor="@color/colorLanguageTxt"
                android:textSize="18sp" />

            <Button
                android:id="@+id/acLanguage_btnFrance"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:background="@drawable/background_ic_card"
                android:text="@string/france"
                android:textColor="@color/colorLanguageTxt"
                android:textSize="18sp" />


            <Button
                android:id="@+id/acLanguage_btnGerman"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:background="@drawable/background_ic_card"
                android:text="@string/german"
                android:textColor="@color/colorLanguageTxt"
                android:textSize="18sp" />


            <Button
                android:id="@+id/acLanguage_btnIndonesian"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:background="@drawable/background_ic_card"
                android:text="@string/indonesian"
                android:textColor="@color/colorLanguageTxt"
                android:textSize="18sp" />

            <Button
                android:id="@+id/acLanguage_btnItalian"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:background="@drawable/background_ic_card"
                android:text="@string/italian"
                android:textColor="@color/colorLanguageTxt"
                android:textSize="18sp" />

            <Button
                android:id="@+id/acLanguage_btnPolish"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:background="@drawable/background_ic_card"
                android:text="@string/polish"
                android:textColor="@color/colorLanguageTxt"
                android:textSize="18sp" />

            <Button
                android:id="@+id/acLanguage_btnPortuguese"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:background="@drawable/background_ic_card"
                android:text="@string/portuguese"
                android:textColor="@color/colorLanguageTxt"
                android:textSize="18sp" />


            <Button
                android:id="@+id/acLanguage_btnRussian"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:background="@drawable/background_ic_card"
                android:elevation="@dimen/_2sdp"
                android:text="@string/russian"
                android:textColor="@color/colorLanguageTxt"
                android:textSize="18sp" />

            <Button
                android:id="@+id/acLanguage_btnSpanish"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:background="@drawable/background_ic_card"
                android:elevation="@dimen/_2sdp"
                android:text="@string/spanish"
                android:textColor="@color/colorLanguageTxt"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>