<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_20sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/please_enter_password"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dialog_etFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:hint="@string/eg_wifi_password"
            android:minWidth="@dimen/_150sdp"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_etFileName"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="vertical"

            >

            <Button
                android:id="@+id/dialogBtn_connect"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@drawable/background_btns"
                android:text="@string/connect"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <Button
                android:id="@+id/dialgBtn_Cancel"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/background_btns"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"


                />


        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>