<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textSSID1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:inputType="textPassword"
        android:textColor="#ffff"

        android:layout_alignParentLeft="true" />

    <CheckBox
        android:id="@+id/cb_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textPassword"
        android:text="@string/show_password"
        android:textColor="#ffff"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cb_show"
        android:layout_marginTop="0dp"
        android:text="@string/connect"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/btn_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/okButton"
        android:layout_marginStart="125dp"
        android:layout_weight="0.5"
        android:text="@string/cancel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="125dp" />



</RelativeLayout>
